--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,17 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen 80 default_server;
+    listen [::]:80 default_server;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
-    # error_log stderr;
+    error_log stderr;
+    access_log stdout;
+
+    root   /var/www/html;
+    index  index.php index.html index.htm;
 
     location / {
-        root   /var/www/html;
-        index  index.php index.html index.htm;
+        autoindex on;
         try_files $uri $uri/ $uri/index.php /index.php;
     }
 
