--- a/php.ini
+++ b/php.ini
@@ -3,5 +3,5 @@ short_open_tag=on
 log_errors=on;
 display_errors=on
 display_startup_errors=on
-error_reporting=E_ALL
+error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; date.timezone=Europe/Berlin
