--- a/php.ini
+++ b/php.ini
@@ -5,3 +5,6 @@ display_errors=on
 display_startup_errors=on
 error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; date.timezone=Europe/Berlin
+
+error_log = /proc/self/fd/2
+access.log = /proc/self/fd/2
