--- a/php.ini
+++ b/php.ini
@@ -1,8 +1,8 @@
 [global]
-short_open_tag=on
+short_open_tag=off
 log_errors=on;
-display_errors=on
-display_startup_errors=on
+display_errors=off
+display_startup_errors=off
 error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; date.timezone=Europe/Berlin
 
