Fix php-fpm access log format
[global] was not accepting access.format, it had to be under [www]

--- a/php-fpm-log.conf
+++ b/php-fpm-log.conf
@@ -1,3 +1,2 @@
-[global]
-# access.format = "[%t] %s %m %{REQUEST_URI}e %f took:%ds mem:%{mega}Mmb cpu:%C%% {%{REMOTE_ADDR}e|%{HTTP_USER_AGENT}e}"
-access.format = "[%t] %s %m %{REQUEST_URI}e %f took:%ds mem:%{mega}Mmb cpu:%C%% %{REMOTE_ADDR}e"
+[www]
+access.format = "[%t] %{REMOTE_ADDR}e %m %s %{REQUEST_URI}e %f took:%ds mem:%{mega}Mmb cpu:%C%%"
