Enable change the Nginx root from ENV variable

--- a/default-site.conf
+++ b/default-site.conf
@@ -7,30 +7,16 @@ server {
     error_log stderr;
     access_log stdout;
 
-    root   /var/www/html;
-    index  index.php index.html index.htm;
+    include snippets/root.conf;
+
+    index index.html index.htm index.php;
 
     location / {
         autoindex on;
-        try_files $uri $uri/ $uri/index.php /index.php;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ~ .*\.php$ {
-        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-
-        if (!-f $document_root$fastcgi_script_name) {
-            return 404;
-        }
-
-        # Mitigate https://httpoxy.org/ vulnerabilities
-        fastcgi_param HTTP_PROXY "";
-
-        include /etc/nginx/fastcgi_params;
-
-        fastcgi_pass 127.0.0.1:9000;
-
-        fastcgi_param     SCRIPT_FILENAME   $document_root$fastcgi_script_name;
-    }
+    include snippets/enable-php.conf;
 
     # error_page  404              /404.html;
 
