--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,23 @@ jobs:
       - name: Publish PHP 7
         run: make publish
 
+  php_71:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        id: docker_login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build PHP 7.1
+        run: make build_71
+
+      - name: Publish PHP 7.1
+        run: make publish_71
 
   php_5:
     runs-on: ubuntu-latest
