--- a/xdebug.ini
+++ b/xdebug.ini
@@ -1,8 +1,15 @@
 [Xdebug]
+; v2.x legacy configuration
+xdebug.remote_enable=1
+xdebug.remote_port=9001
+xdebug.remote_host=host.docker.internal
+xdebug.remote_connect_back=0
+
+; v3.x new configuration
 xdebug.mode=debug
 xdebug.start_with_request=yes
 xdebug.discover_client_host=false
 xdebug.client_host=host.docker.internal
-xdebug.client_port=9003
+xdebug.client_port=9001
 xdebug.scream=1
 xdebug.cli_color=1
