--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,24 @@ on:
   workflow_dispatch:
 
 jobs:
+  php_8:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        id: docker_login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build PHP 8
+        run: make build
+
+      - name: Publish PHP 8
+        run: make publish
+
   php_7:
     runs-on: ubuntu-latest
     steps:
@@ -20,10 +38,10 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build PHP 7
-        run: make build
+        run: make build_7
 
       - name: Publish PHP 7
-        run: make publish
+        run: make publish_7
 
   php_71:
     runs-on: ubuntu-latest
