Enable OPCache for PHP and allow deploy with symbolic links

--- a/snippets/enable-php.conf
+++ b/snippets/enable-php.conf
@@ -5,4 +5,10 @@ location ~ .*\.php$ {
     include snippets/fastcgi-php.conf;
 
     fastcgi_pass 127.0.0.1:9000;
+
+    # Fix the deploy with symbolic links issue and OPCache
+    # https://laravel-news.com/php-opcache-docker
+    # instead of /srv/current/index.php it will be /srv/{deploy-version}/index.php
+    fastcgi_param SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT $realpath_root;
 }
