--- a/php.ini
+++ b/php.ini
@@ -1,10 +1,18 @@
 [global]
+; date.timezone=Europe/Berlin
 short_open_tag=off
 log_errors=on;
 display_errors=off
 display_startup_errors=off
 error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
-; date.timezone=Europe/Berlin
+ignore_repeated_errors=on
+ignore_repeated_source=on
+upload_max_filesize = 20M
+expose_php = Off
+memory_limit = 64M
 
 error_log = /proc/self/fd/2
 access.log = /proc/self/fd/2
+
+[opcache]
+opcache.enable=1
