Fix install of mcrypt 1.0.4 on PHP >= 8.1.0

--- a/Dockerfile.xdebug
+++ b/Dockerfile.xdebug
@@ -6,3 +6,5 @@ RUN pecl install $PECL_EXT
 
 ARG ENABLE_EXT="xdebug"
 RUN docker-php-ext-enable $ENABLE_EXT
+
+COPY ["xdebug.ini", "/usr/local/etc/php/conf.d/"]
