--- a/root-fs/etc/php/conf.d/php.ini
+++ b/root-fs/etc/php/conf.d/php.ini
@@ -1,5 +1,4 @@
 [global]
-; date.timezone=Europe/Berlin
 short_open_tag=off
 log_errors=on;
 display_errors=off
@@ -11,8 +10,8 @@ upload_max_filesize = 20M
 expose_php = Off
 memory_limit = 64M
 
-error_log = /proc/self/fd/2
-access.log = /proc/self/fd/2
+error_log = /config/log/php/error.log
+access.log = /config/log/php/access.log
 
 [opcache]
 opcache.enable=1
