--- a/root-fs/etc/nginx/snippets/fastcgi-php.conf
+++ b/root-fs/etc/nginx/snippets/fastcgi-php.conf
@@ -1,3 +1,6 @@
+# include it first to override its defaults bellow
+include /etc/nginx/fastcgi.conf;
+
 # regex to split $uri to $fastcgi_script_name and $fastcgi_path
 fastcgi_split_path_info ^(.+\.php)(/.+)$;
 
@@ -30,5 +33,3 @@ fastcgi_buffers 4 16k;
 fastcgi_connect_timeout 300s;
 fastcgi_send_timeout 300s;
 fastcgi_read_timeout 300s;
-
-include /etc/nginx/fastcgi.conf;
