--- a/root-fs/etc/php/conf.d/custom-php.ini
+++ b/root-fs/etc/php/conf.d/custom-php.ini
@@ -6,12 +6,12 @@ display_startup_errors=off
 error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
 ignore_repeated_errors=on
 ignore_repeated_source=on
-upload_max_filesize = 20M
+post_max_size = 0
+upload_max_filesize = 0
 expose_php = Off
 memory_limit = 64M
-
-error_log = /config/log/php/error.log
-access.log = /config/log/php/access.log
+# Adding 'E' in the beginning to have access to Environment variables
+variables_order = EGPCS
 
 [opcache]
 opcache.enable=1
