--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,29 +19,11 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build PHP 8
+      - name: Build PHP 8.1
         run: make build
 
-      - name: Publish PHP 8
-        run: TAG=8 make publish
-
-  php_7:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Login to Docker Hub
-        id: docker_login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build PHP 7
-        run: make build_7
-
-      - name: Publish PHP 7
-        run: TAG=7 make publish
+      - name: Publish PHP 8.1
+        run: TAG=8.1-alpine make publish
 
   php_71:
     runs-on: ubuntu-latest
@@ -59,22 +41,4 @@ jobs:
         run: make build_71
 
       - name: Publish PHP 7.1
-        run: TAG=7.1 make publish
-
-  php_5:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Login to Docker Hub
-        id: docker_login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build PHP 5
-        run: make build_5
-
-      - name: Publish PHP 5
-        run: TAG=5.6 make publish
+        run: TAG=7.1-alpine make publish
