--- a/root-fs/defaults/nginx/site-confs/default.conf.sample
+++ b/root-fs/defaults/nginx/site-confs/default.conf.sample
@@ -28,4 +28,9 @@ server {
   location ~ /\.ht {
     deny all;
   }
+
+  error_page 500 502 503 504  /50x.html;
+  location = /50x.html {
+    root /var/lib/nginx/html;
+  }
 }
