Move away from supervisor and use only PID for logrotation

--- a/root-fs/etc/php/php-fpm.d/www2.conf
+++ b/root-fs/etc/php/php-fpm.d/www2.conf
@@ -1,6 +1,7 @@
 [global]
+pid = /run/php-fpm.pid
 error_log = /config/log/php/error.log
-include=/config/php/php-fpm.d/*.conf
+include = /config/php/php-fpm.d/*.conf
 
 [www]
 user = www-data
