Run nginx and php as the www-user to correctly set log files

--- a/root-fs/etc/php/php-fpm.d/www2.conf
+++ b/root-fs/etc/php/php-fpm.d/www2.conf
@@ -4,8 +4,10 @@ error_log = /config/log/php/error.log
 include = /config/php/php-fpm.d/*.conf
 
 [www]
-user = www-data
-group = www-data
+user =
+group =
 access.format = "[%t] %{REMOTE_ADDR}e %m %s %{REQUEST_URI}e %f took:%ds mem:%{mega}Mmb cpu:%C%%"
 access.log = /config/log/php/access.log
 clear_env = no
+php_admin_value[error_log] = /config/log/php/error.log
+php_admin_flag[log_errors] = on
