--- a/root-fs/etc/nginx/snippets/fastcgi-php.conf
+++ b/root-fs/etc/nginx/snippets/fastcgi-php.conf
@@ -15,7 +15,7 @@ fastcgi_param HTTP_PROXY "";
 set $path_info $fastcgi_path_info;
 fastcgi_param PATH_INFO $path_info;
 
-fastcgi_intercept_errors on;
+fastcgi_intercept_errors off;
 
 fastcgi_index index.php;
 
