Adjustments and README

--- a/root-fs/defaults/nginx/site-confs/default.conf.sample
+++ b/root-fs/defaults/nginx/site-confs/default.conf.sample
@@ -5,13 +5,7 @@ server {
 
   server_name _;
 
-  set $root /app/public;
-
-  if (!-d /app/public) {
-      set $root /app;
-  }
-
-  root $root;
+  root /app/public;
   index index.html index.htm index.php;
 
   location / {
