--- a/Dockerfile.xdebug
+++ b/Dockerfile.xdebug
@@ -1,10 +1,15 @@
 ARG FROM_IMAGE
 FROM $FROM_IMAGE
 
-ARG PECL_EXT="xdebug-3.0.4"
-RUN pecl install $PECL_EXT
+ARG XDEBUG_PKG
 
-ARG ENABLE_EXT="xdebug"
-RUN docker-php-ext-enable $ENABLE_EXT
+RUN \
+  apk add --no-cache \
+    ${XDEBUG_PKG} && \
+  mv \
+    /defaults/php/conf.d/xdebug.ini.sample \
+    /etc/php/conf.d/xdebug.ini
 
-COPY ["xdebug.ini", "/usr/local/etc/php/conf.d/"]
+ARG BUILD_DATE
+ARG VERSION
+LABEL build_version="version:- ${VERSION} Build-date:- ${BUILD_DATE}"
