--- a/root-fs/defaults/php/conf.d/xdebug.ini.sample
+++ b/root-fs/defaults/php/conf.d/xdebug.ini.sample
@@ -1,16 +1,18 @@
 [Xdebug]
+zend_extension=xdebug.so
 xdebug.scream=0
 xdebug.cli_color=1
 
 ; v2.x legacy configuration
 xdebug.remote_enable=1
-xdebug.remote_port=9001
+xdebug.remote_port=9003
 xdebug.remote_host=host.docker.internal
 xdebug.remote_connect_back=0
+xdebug.remote_autostart=1
 
 ; v3.x new configuration
-xdebug.mode=debug
+xdebug.mode=debug,develop
 xdebug.start_with_request=yes
 xdebug.discover_client_host=false
 xdebug.client_host=host.docker.internal
-xdebug.client_port=9001
+xdebug.client_port=9003
