--- a/root-fs/etc/php/conf.d/custom-php.ini
+++ b/root-fs/etc/php/conf.d/custom-php.ini
@@ -1,5 +1,4 @@
 [global]
-; date.timezone=Europe/Berlin
 short_open_tag=off
 log_errors=on;
 display_errors=off
@@ -7,12 +6,12 @@ display_startup_errors=off
 error_reporting=E_ALL & ~E_DEPRECATED & ~E_STRICT
 ignore_repeated_errors=on
 ignore_repeated_source=on
-upload_max_filesize = 20M
+post_max_size = 0
+upload_max_filesize = 0
 expose_php = Off
 memory_limit = 64M
-
-error_log = /proc/self/fd/2
-access.log = /proc/self/fd/2
+# Adding 'E' in the beginning to have access to Environment variables
+variables_order = EGPCS
 
 [opcache]
 opcache.enable=1
