--- a/root-fs/etc/php/php-fpm.d/www2.conf
+++ b/root-fs/etc/php/php-fpm.d/www2.conf
@@ -1,5 +1,5 @@
 [global]
-pid = /run/php-fpm.pid
+pid = /run/php-fpm/php-fpm.pid
 error_log = /config/log/php/error.log
 include = /config/php/php-fpm.d/*.conf
 
