Reduce the PHP-fpm threads

--- a/root-fs/etc/php/php-fpm.d/www2.conf
+++ b/root-fs/etc/php/php-fpm.d/www2.conf
@@ -11,3 +11,27 @@ access.log = /config/log/php/access.log
 clear_env = no
 php_admin_value[error_log] = /config/log/php/error.log
 php_admin_flag[log_errors] = on
+
+;   dynamic - the number of child processes are set dynamically based on the
+;     following directives. With this process management, there will be
+;     always at least 1 children.
+;
+;     pm.max_children      - the maximum number of children that can
+;                            be alive at the same time.
+;
+;     pm.start_servers     - the number of children created on startup.
+;
+;     pm.min_spare_servers - the minimum number of children in 'idle'
+;                            state (waiting to process). If the number
+;                            of 'idle' processes is less than this
+;                            number then some children will be created.
+;
+;     pm.max_spare_servers - the maximum number of children in 'idle'
+;                            state (waiting to process). If the number
+;                            of 'idle' processes is greater than this
+;                            number then some children will be killed
+pm = dynamic
+pm.start_servers = 1
+pm.max_children = 10
+pm.min_spare_servers = 1
+pm.max_spare_servers = 1
