--- a/root-fs/defaults/nginx/site-confs/default.conf.sample
+++ b/root-fs/defaults/nginx/site-confs/default.conf.sample
@@ -3,13 +3,18 @@ server {
   listen 8080 default_server;
   listen [::]:8080 default_server;
 
+  listen 8443 ssl http2;
+  listen [::]:8443 ssl http2;
+
   server_name _;
+
+  include /config/nginx/ssl.conf;
 
   root /app/public;
   index index.html index.htm index.php;
 
   location / {
-    try_files $uri $uri/ /index.html /index.php?$args =404;
+    try_files $uri $uri/ /index.html /index.php?$args;
   }
 
   location ~ .*\.php$ {
