Change the php-fpm include position to make it override previous settings

--- a/root-fs/etc/php/php-fpm.d/www2.conf
+++ b/root-fs/etc/php/php-fpm.d/www2.conf
@@ -1,7 +1,6 @@
 [global]
 pid = /run/php-fpm/php-fpm.pid
 error_log = /config/log/php/error.log
-include = /config/php/php-fpm.d/*.conf
 
 [www]
 user =
@@ -35,3 +34,6 @@ pm.start_servers = 1
 pm.max_children = 10
 pm.min_spare_servers = 1
 pm.max_spare_servers = 1
+
+; leave include as the last, otherwise it doen't override the above settings.
+include = /config/php/php-fpm.d/*.conf
