--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,38 +7,34 @@ on:
   workflow_dispatch:
 
 jobs:
-  php_8:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        tag: [8.1, 7.1]
+        include:
+          - tag: 8.1
+            target: build
+
+          - tag: 7.1
+            target: build_71
+    env:
+      TAG: ${{ matrix.tag }}-alpine
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Login to Docker Hub
         id: docker_login
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build PHP 8.1
-        run: make build
+      - name: Build PHP ${{ matrix.tag }}
+        run: make ${{ matrix.target }}
 
-      - name: Publish PHP 8.1
-        run: TAG=8.1-alpine make publish
-
-  php_71:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Login to Docker Hub
-        id: docker_login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build PHP 7.1
-        run: make build_71
-
-      - name: Publish PHP 7.1
-        run: TAG=7.1-alpine make publish
+      - name: Publish PHP ${{ matrix.tag }}
+        run: make publish
