--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        tag: [8.1, 7.1]
+        tag: [8.1-alpine, 7.1-alpine]
+        image: [carlosalgms/docker-php-fpm-nginx]
+        latest: [8.1-alpine]
         include:
-          - tag: 8.1
-            target: build
+          - tag: 8.1-alpine
+            buildArgs: ""
+            buildArgsXDebug: ""
 
-          - tag: 7.1
-            target: build_71
+          - tag: 7.1-alpine
+            buildArgs: |
+              PHP_VER=7
+              EXTRA_REPO=3.7
+              VARIABLE_DEPS=php7-mcrypt
+              COMPOSER_VERSION=2.2.18
+            buildArgsXDebug: |
+              XDEBUG_PKG=php7-xdebug
     env:
-      TAG: ${{ matrix.tag }}-alpine
+      TAGGED_IMAGE: ${{ matrix.image }}:${{ matrix.tag }}
+      TAGS: ${{ matrix.tag == matrix.latest && format('{0}:latest,', matrix.image) || '' }}${{ matrix.image }}:${{ matrix.tag }}
+
     steps:
       - uses: actions/checkout@v2
 
@@ -36,8 +47,33 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build PHP ${{ matrix.tag }}
-        run: make ${{ matrix.target }}
+      - name: Build and push ${{ matrix.tag }}
+        id: docker_build
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          pull: true
+          push: true
+          platforms: linux/amd64,linux/arm64
+          # platforms: linux/amd64,linux/arm64,linux/arm/v7
+          cache-from: ${{ env.TAGGED_IMAGE }}
+          cache-to: type=inline
+          build-args: ${{ matrix.buildArgs }}
+          tags: ${{ env.TAGS }}
 
-      - name: Publish PHP ${{ matrix.tag }}
-        run: make publish
+      - name: Xdebug Build and push ${{ matrix.tag }}
+        id: docker_build
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          pull: true
+          push: true
+          platforms: linux/amd64,linux/arm64
+          # platforms: linux/amd64,linux/arm64,linux/arm/v7
+          cache-from: ${{ env.TAGGED_IMAGE }}-xdebug
+          cache-to: type=inline
+          build-args: |
+            FROM_IMAGE=${{ env.TAGGED_IMAGE }}
+            ${{ matrix.buildArgsXDebug }}
+          tags: ${{ env.TAGGED_IMAGE }}-xdebug
+          file: Dockerfile.xdebug
